Improve interval logic.